# Shellmind

./: .env  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/google/generativelanguage/v1beta/: model.proto
crates/core/src/: lib.rs  tools.rs
crates/extensions/: Cargo.toml
crates/extensions/src/: lib.rs
crates/shellmind/: Cargo.toml
crates/shellmind/src/: main.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
