[package]
name = "core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
async-std = { version = "1.12", features = ["attributes"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# TODO: Add Gemini gRPC support

[dev-dependencies]
# For test automation
