[package]
name = "core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
async-std = { version = "1.12", features = ["attributes"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0"
toml = "0.8"
tonic = "0.11"
prost = "0.12"
http = "0.2"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }

[dev-dependencies]

