[package]
name = "core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] } # 'stream' özelliği eklendi
thiserror = "1.0"
toml = "0.8"
tonic = { workspace = true }
prost = { workspace = true }
http = "0.2"
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true } # tokio eklendi
dialoguer = { workspace = true }
async-trait = "0.1"
regex = "1.10"
ignore = "0.4"
glob = "0.3"
walkdir = "2.4"
dirs = "5.0"

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }

[dev-dependencies]

