[package]
name = "shellmind"
version = "0.2.0"
edition = "2021"
authors = ["Shellmind Contributors"]
description = "Shellmind: Terminal-based AI assistant (Rust Edition)"
license = "MIT"

[dependencies]
core = { path = "../core" }
ui = { path = "../ui" }
cli = { path = "../cli" }
dotenv = "0.15"

# For async runtime and command execution
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
rustyline = { workspace = true }
regex = { workspace = true }


