[package]
name = "tools"
version = "0.2.0"
edition = "2021"

[dependencies]
lopdf = { version = "0.31", optional = true }
image = { version = "0.24", optional = true }
walkdir = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { workspace = true }


